vemo-app/main/default/objects/VemoAdobeSignSettings__c/VemoAdobeSignSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Vemo Adobe Sign Settings</label>
</CustomObject>