vemo-app/main/default/objects/VemoAdobeSignSettings__c/fields/accessToken__c.field-meta.xml
<CustomField>
    <fullName>accessToken__c</fullName>
    <label>accessToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>