vemo-app/main/default/objects/VemoAdobeSignSettings__c/fields/apiAccessPoint__c.field-meta.xml
<CustomField>
    <fullName>apiAccessPoint__c</fullName>
    <label>apiAccessPoint</label>
    <type>Url</type>
</CustomField>