vemo-app/main/default/objects/VemoAdobeSignSettings__c/fields/authorizationCode__c.field-meta.xml
<CustomField>
    <fullName>authorizationCode__c</fullName>
    <label>authorizationCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>