vemo-app/main/default/objects/VemoAdobeSignSettings__c/fields/clientID__c.field-meta.xml
<CustomField>
    <fullName>clientID__c</fullName>
    <label>clientID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>