vemo-app/main/default/objects/VemoAdobeSignSettings__c/fields/clientSecret__c.field-meta.xml
<CustomField>
    <fullName>clientSecret__c</fullName>
    <label>clientSecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>