vemo-app/main/default/objects/VemoAdobeSignSettings__c/fields/oauthEndpoint__c.field-meta.xml
<CustomField>
    <fullName>oauthEndpoint__c</fullName>
    <defaultValue>"https://secure.na1.echosign.com/public/oauth"</defaultValue>
    <label>oauthEndpoint</label>
    <type>Url</type>
</CustomField>