vemo-app/main/default/objects/VemoAdobeSignSettings__c/fields/redirectURL__c.field-meta.xml
<CustomField>
    <fullName>redirectURL__c</fullName>
    <label>redirectURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>