vemo-app/main/default/objects/VemoAdobeSignSettings__c/fields/refreshToken__c.field-meta.xml
<CustomField>
    <fullName>refreshToken__c</fullName>
    <label>refreshToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>